force-app/main/default/objects/Target__c/Target__c.object-meta.xml
<CustomObject>
    <label>Target</label>
    <nameField>
        <displayFormat>T-{00000000}</displayFormat>
        <label>Target ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>