force-app/main/default/objects/Target__c/fields/Financial_Year__c.field-meta.xml
<CustomField>
    <fullName>Financial_Year__c</fullName>
    <formula>&quot;FY&quot; &amp; 
RIGHT(TEXT(IF(Month(Target_Date__c)&gt;6, YEAR(Target_Date__c) +1, YEAR(Target_Date__c))),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financial Year</label>
    <type>Text</type>
</CustomField>