force-app/main/default/objects/Target__c/fields/International_Revenue_Variance__c.field-meta.xml
<CustomField>
    <fullName>International_Revenue_Variance__c</fullName>
    <description>Difference between International Revenue and Target MAT</description>
    <formula>Account_Name__r.QF_International_Revenue__c  -  QF_Rev_Target_MAT__c</formula>
    <label>International Revenue Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>