force-app/main/default/objects/Target__c/fields/is_Current_Month__c.field-meta.xml
<CustomField>
    <fullName>is_Current_Month__c</fullName>
    <formula>MONTH(TODAY())==MONTH(Target_Date__c)
&amp;&amp;
YEAR(TODAY())==YEAR(Target_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Current Month</label>
    <type>Checkbox</type>
</CustomField>