force-app/main/default/objects/Target__c/fields/Network__c.field-meta.xml
<CustomField>
    <fullName>Network__c</fullName>
    <description>Network used to distinguish Route</description>
    <label>Network</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>