force-app/main/default/objects/Target__c/fields/QF_Rev_Share_Target__c.field-meta.xml
<CustomField>
    <fullName>QF_Rev_Share_Target__c</fullName>
    <description>Share Target for either Domestic or International for Target Object</description>
    <label>QF Revenue Share Target</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>