force-app/main/default/objects/Target__c/fields/QF_Rev_Target__c.field-meta.xml
<CustomField>
    <fullName>QF_Rev_Target__c</fullName>
    <description>The Revenue Target field for either Domestic or International Network</description>
    <label>QF Revenue Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>