force-app/main/default/objects/Target__c/fields/QF_Rev_Target_MAT__c.field-meta.xml
<CustomField>
    <fullName>QF_Rev_Target_MAT__c</fullName>
    <description>Moving Annual Total (12 month rolling) Target</description>
    <label>QF Revenue Target (MAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>