force-app/main/default/objects/Target__c/fields/QF_Revenue__c.field-meta.xml
<CustomField>
    <fullName>QF_Revenue__c</fullName>
    <inlineHelpText>Actual Monthly Qantas Revenue</inlineHelpText>
    <label>QF Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>