force-app/main/default/objects/Target__c/fields/QF_Revenue_MAT__c.field-meta.xml
<CustomField>
    <fullName>QF_Revenue_MAT__c</fullName>
    <formula>IF( is_Current_FY__c=true, 
IF( ISPICKVAL(Network__c, &quot;Domestic&quot;),
 Account_Name__r.QF_Domestic_Revenue__c ,  Account_Name__r.QF_International_Revenue__c ), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Moving Annual Total Qantas revenue by network</inlineHelpText>
    <label>QF Revenue (MAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>