force-app/main/default/objects/Target__c/fields/Revenue_Var_MAT__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Var_MAT__c</fullName>
    <description>Shows the variance between the actual revenue for both Domestic/International and the respective target revenues.</description>
    <formula>IF( is_Current_FY__c=true, 
IF
( 
ISPICKVAL(Network__c, &quot;Domestic&quot;), 
Account_Name__r.QF_Domestic_Revenue__c  -   QF_Rev_Target_MAT__c,  Account_Name__r.QF_International_Revenue__c  -   QF_Rev_Target_MAT__c
)
, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Moving Annual Total revenue variance by network</inlineHelpText>
    <label>Revenue Var (MAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>