force-app/main/default/objects/Target__c/fields/Revenue_Var_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Var_Monthly__c</fullName>
    <formula>IF(QF_Revenue__c &gt; 0, QF_Revenue__c -  QF_Rev_Target__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Actual monthly QF revenue - QF monthly revenue target</inlineHelpText>
    <label>Revenue Var (Monthly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>