force-app/main/default/objects/Target__c/fields/Year_Month__c.field-meta.xml
<CustomField>
    <fullName>Year_Month__c</fullName>
    <formula>TEXT(YEAR(Target_Date__c)) &amp; &quot;-&quot; &amp; 
IF(MONTH(Target_Date__c)&gt;9, TEXT(MONTH(Target_Date__c)), &quot;0&quot; &amp; TEXT( MONTH(Target_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year Month</label>
    <type>Text</type>
</CustomField>