force-app/main/default/objects/Target__c/listViews/International_Network.listView-meta.xml
<ListView>
    <fullName>International_Network</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Financial_Year__c</columns>
    <columns>Year_Month__c</columns>
    <columns>QF_Rev_Target__c</columns>
    <columns>QF_Rev_Target_MAT__c</columns>
    <columns>QF_Rev_Share_Target__c</columns>
    <columns>Target_Date__c</columns>
    <columns>Network__c</columns>
    <columns>is_Current_Month__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Network__c</field>
        <operation>equals</operation>
        <value>International</value>
    </filters>
    <label>Target for International Network</label>
</ListView>